my issues for milestone 10; #39, #41, #45, #50

--- a/src/app/containers/Home/Wiki/style.scss
+++ b/src/app/containers/Home/Wiki/style.scss
@@ -20,8 +20,9 @@
     width: 100%;
 }
 #wrapper{
-    width: calc(100% - 300px);
+    width: calc(100% - 320px);
     display: inline-block;
     vertical-align: top;
     padding-top: 20px;
+    margin-left: 20px;
 }
