fixed iframe height, renamed some files

--- a/src/app/res/Deployments/views/Proxy/style.module.scss
+++ b/src/app/res/Deployments/views/Proxy/style.module.scss
@@ -5,7 +5,8 @@
 
 #iframe{
     width: 100%;
-    height: calc(100% - 5px);
+    // height: calc(100% - 5px);
+    height: 100%;
     box-sizing: border-box;
     border: 0;
 }
